--- a/src/main/resources/static/testStreamVideo.html
+++ b/src/main/resources/static/testStreamVideo.html
@@ -94,7 +94,8 @@
             alert("Please enter a valid Attachment ID!");
             return;
         }
-        video.src = `http://localhost:8082/api/student/content-video/${videoId}/stream`;
+        /*video.src = `http://localhost:8082/api/student/content-video/${videoId}/stream`;*/
+        video.src = `https://dev.anvarovich.uz/api/student/content-video/${videoId}/stream`;
         video.load();
         video.play();
     }
